[package]
name = "lunch-voting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.196", features = [ "derive" ] }
serde_json = "1.0.113"
sqlx = { version = "0.7.3", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.36.0", features = [ "full" ] }
tracing-subscriber = "0.3.18"
